--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "primereact": "^10.9.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
     "reflect-metadata": "^0.2.2",
